@@ -10,6 +10,7 @@ import java.util.Map;
 import java.util.Optional;
 import ml.mypals.carpetgui.CarpetGUIClient;
 import ml.mypals.carpetgui.network.RuleData;
+import ml.mypals.carpetgui.network.client.CarpetGUIClientPacketHandler;
 import ml.mypals.carpetgui.network.client.RequestRuleStackPayload;
 import ml.mypals.carpetgui.network.server.RuleStackSyncPayload;
 import ml.mypals.carpetgui.screen.ScreenTabBar;
@@ -108,14 +109,14 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       FlowLayout prefabSection = UIContainers.verticalFlow(Sizing.fill(100), Sizing.content());
       prefabSection.carpetGUI$margins(Insets.bottom(5));
       panel.child(prefabSection);
-      this.prefabNameLabel = UIComponents.label(Component.translatable("gui.rulestack.prefab", new Object[]{"…"}).withStyle(ChatFormatting.YELLOW));
+      this.prefabNameLabel = UIComponents.label(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.prefab", new Object[]{"…"}).withStyle(ChatFormatting.YELLOW));
       this.prefabNameLabel.color(Color.WHITE);
       this.prefabNameLabel.carpetGUI$margins(Insets.bottom(3));
       prefabSection.child(this.prefabNameLabel);
       FlowLayout prefabBtns = UIContainers.horizontalFlow(Sizing.fill(100), Sizing.fill(5));
       prefabBtns.gap(3);
-      prefabBtns.child(ScreenUtils.btn(Component.translatable("gui.rulestack.btn.switch"), Sizing.fill(20), Sizing.fill(100), () -> this.togglePrefabPanel(RuleStackScreen.PrefabPanel.LIST)));
-      prefabBtns.child(ScreenUtils.btn(Component.translatable("gui.rulestack.btn.new_prefab"), Sizing.fill(20), Sizing.fill(100), () -> this.togglePrefabPanel(RuleStackScreen.PrefabPanel.NEW_INPUT)));
+      prefabBtns.child(ScreenUtils.btn(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.btn.switch"), Sizing.fill(20), Sizing.fill(100), () -> this.togglePrefabPanel(RuleStackScreen.PrefabPanel.LIST)));
+      prefabBtns.child(ScreenUtils.btn(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.btn.new_prefab"), Sizing.fill(20), Sizing.fill(100), () -> this.togglePrefabPanel(RuleStackScreen.PrefabPanel.NEW_INPUT)));
       prefabSection.child(prefabBtns);
       this.prefabDynamic = UIContainers.verticalFlow(Sizing.fill(100), Sizing.content());
       this.prefabDynamic.carpetGUI$margins(Insets.top(3));
@@ -126,7 +127,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       ScrollContainer<FlowLayout> timelineScroll = UIContainers.<FlowLayout>verticalScroll(Sizing.fill(100), Sizing.fill(60), this.timelineLayout);
       timelineScroll.scrollbar(ScrollContainer.Scrollbar.flat(Color.WHITE));
       panel.child(timelineScroll);
-      String hint = Component.translatable("gui.rulestack.message_hint").getString();
+      String hint = new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.message_hint").getString();
       this.pushMessageBox = UIComponents.textBox(Sizing.fill(100));
       this.pushMessageBox.setMaxLength(100);
       this.pushMessageBox.setSuggestion(hint);
@@ -151,20 +152,20 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
    private void buildBottomButtons() {
       this.bottomButtonLayout.clearChildren();
       Component pushTooltip = this.rebuildPushHint();
-      FlowLayout pushButton = ScreenUtils.btn(Component.translatable("gui.rulestack.btn.push"), Sizing.fill(31), Sizing.fill(100), () -> {
+      FlowLayout pushButton = ScreenUtils.btn(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.btn.push"), Sizing.fill(31), Sizing.fill(100), () -> {
          String msg = this.pushMessageBox.getValue().trim();
          String var10001 = msg.isEmpty() ? "" : " " + msg;
          this.sendCmd("rulestack push" + var10001);
          this.pushMessageBox.setValue("");
-         this.pushMessageBox.setSuggestion(Component.translatable("gui.rulestack.message_hint").getString());
+         this.pushMessageBox.setSuggestion(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.message_hint").getString());
       });
       if (pushTooltip != null) {
          pushButton.tooltip(pushTooltip);
       }
 
       this.bottomButtonLayout.child(pushButton);
-      this.bottomButtonLayout.child(ScreenUtils.btn(Component.translatable("gui.rulestack.btn.pop"), Sizing.fill(31), Sizing.fill(100), () -> this.sendCmd("rulestack pop")));
-      this.bottomButtonLayout.child(ScreenUtils.btn(Component.translatable("gui.rulestack.btn.discard"), Sizing.fill(31), Sizing.fill(100), () -> this.sendCmd("rulestack discard")));
+      this.bottomButtonLayout.child(ScreenUtils.btn(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.btn.pop"), Sizing.fill(31), Sizing.fill(100), () -> this.sendCmd("rulestack pop")));
+      this.bottomButtonLayout.child(ScreenUtils.btn(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.btn.discard"), Sizing.fill(31), Sizing.fill(100), () -> this.sendCmd("rulestack discard")));
    }
 
    private void togglePrefabPanel(PrefabPanel target) {
@@ -195,20 +196,20 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
             row.padding(Insets.of(2, 2, 0, 0));
             row.verticalAlignment(VerticalAlignment.CENTER);
             row.surface(Surface.flat(active ? 1084948394 : 285212671));
-            LabelComponent lbl = UIComponents.label(Component.literal((active ? "> " : "  ") + name));
+            LabelComponent lbl = UIComponents.label(new net.minecraft.network.chat.TextComponent((active ? "> " : "  ") + name));
             lbl.color(Color.WHITE);
             if (!data.pendingChanges().isEmpty()) {
-               row.tooltip(Component.translatable("gui.rulestack.switch_warning"));
+               row.tooltip(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.switch_warning"));
             }
 
             row.child(lbl);
             row.carpetGUI$mouseEnter().subscribe((MouseEnter)() -> {
                if (data.pendingChanges().isEmpty() ||
                         //? if < 26.3 {
-                        /*InputConstants.isKeyDown(this.minecraft.getWindow(), 340)*/
+                        InputConstants.isKeyDown(this.minecraft.getWindow().getWindow(), 340)
                         //?} else {
-                        InputConstants.isKeyDown( 340)
-                        //?}
+                        /*InputConstants.isKeyDown( 340)
+                        *///?}
                ) {
                   row.surface(row.surface().and(Surface.outline(Color.WHITE.argb())));
                }
@@ -220,10 +221,10 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
                row.carpetGUI$mouseDown().subscribe((MouseDown)(mouseButtonEvent, btn) -> {
                   if (!data.pendingChanges().isEmpty() &&
                           //? if < 26.3 {
-                          /*!InputConstants.isKeyDown(this.minecraft.getWindow(), 340)*/
+                          !InputConstants.isKeyDown(this.minecraft.getWindow().getWindow(), 340)
                           //?} else {
-                          !InputConstants.isKeyDown( 340)
-                         //?}
+                          /*!InputConstants.isKeyDown( 340)
+                         *///?}
                   ) {
                      return false;
                   } else {
@@ -248,16 +249,16 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       nameBox.setSuggestion("…");
       nameBox.carpetGUI$focusGained().subscribe((FocusGained)(s) -> nameBox.setSuggestion(""));
       row.child(nameBox);
-      FlowLayout newButton = ScreenUtils.btn(Component.translatable("gui.rulegroups.save"), Sizing.fill(18), Sizing.fill(98), () -> {
+      FlowLayout newButton = ScreenUtils.btn(new net.minecraft.network.chat.TranslatableComponent("gui.rulegroups.save"), Sizing.fill(18), Sizing.fill(98), () -> {
          String n = nameBox.getValue().trim();
          if (!n.isEmpty()) {
-            this.sendCmd("rulestack prefab create " + n + " " + (/*? if < 26.3 {*//*InputConstants.isKeyDown(this.minecraft.getWindow(), 342)*//*?} else {*/InputConstants.isKeyDown(342)/*?}*/ ? "true" : "false"));
+            this.sendCmd("rulestack prefab create " + n + " " + (/*? if < 26.3 {*/InputConstants.isKeyDown(this.minecraft.getWindow().getWindow(), 342)/*?} else {*//*InputConstants.isKeyDown(342)*//*?}*/ ? "true" : "false"));
             this.prefabDynamic.clearChildren();
             this.prefabPanel = RuleStackScreen.PrefabPanel.NONE;
          }
 
       });
-      newButton.tooltip(Component.translatable("gui.tip.fork_current"));
+      newButton.tooltip(new net.minecraft.network.chat.TranslatableComponent("gui.tip.fork_current"));
       row.child(newButton);
       this.prefabDynamic.child(row);
    }
@@ -267,7 +268,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
          this.timelineLayout.clearChildren();
          RuleStackData data = CarpetGUIClient.cachedRuleStackData;
          if (data == null) {
-            this.timelineLayout.child(UIComponents.label(Component.translatable("gui.rulestack.loading").withStyle(ChatFormatting.GRAY)));
+            this.timelineLayout.child(UIComponents.label(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.loading").withStyle(ChatFormatting.GRAY)));
          } else {
             List<RuleStackSyncPayload.LayerInfo> layers = data.layers();
             List<RuleStackSyncPayload.LayerInfo> futureLayers = data.futureLayers();
@@ -281,7 +282,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
                }
 
                boolean sel = Integer.valueOf(-1).equals(this.selectedLayerId);
-               this.timelineLayout.child(this.timelineNode(Component.translatable("gui.rulestack.pending_changes", new Object[]{String.valueOf(data.pendingChanges().size())}).withStyle(ChatFormatting.YELLOW), (Long)null, data.pendingChanges().size(), sel, false, pos < total - 1, RuleStackScreen.NodeStyle.PENDING, this::selectPending));
+               this.timelineLayout.child(this.timelineNode(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.pending_changes", new Object[]{String.valueOf(data.pendingChanges().size())}).withStyle(ChatFormatting.YELLOW), (Long)null, data.pendingChanges().size(), sel, false, pos < total - 1, RuleStackScreen.NodeStyle.PENDING, this::selectPending));
                ++pos;
             }
 
@@ -289,9 +290,9 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
                RuleStackSyncPayload.LayerInfo layer = (RuleStackSyncPayload.LayerInfo)futureLayers.get(i);
                boolean isNextRedo = i == futureLayers.size() - 1;
                int var10000 = layer.id();
-               MutableComponent label = Component.literal("↩ #" + var10000 + " ").withStyle(isNextRedo ? ChatFormatting.AQUA : ChatFormatting.DARK_AQUA);
+               MutableComponent label = new net.minecraft.network.chat.TextComponent("↩ #" + var10000 + " ").withStyle(isNextRedo ? ChatFormatting.AQUA : ChatFormatting.DARK_AQUA);
                if (!layer.message().isEmpty()) {
-                  label.append(Component.literal("\"" + layer.message() + "\"").withStyle(ChatFormatting.UNDERLINE));
+                  label.append(new net.minecraft.network.chat.TextComponent("\"" + layer.message() + "\"").withStyle(ChatFormatting.UNDERLINE));
                }
 
                boolean sel = Integer.valueOf(layer.id()).equals(this.selectedLayerId);
@@ -306,16 +307,16 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
                }
 
                boolean sel = Integer.valueOf(layer.id()).equals(this.selectedLayerId);
-               MutableComponent label = Component.literal("#" + layer.id() + " ").withStyle(ChatFormatting.YELLOW);
+               MutableComponent label = new net.minecraft.network.chat.TextComponent("#" + layer.id() + " ").withStyle(ChatFormatting.YELLOW);
                if (!layer.message().isEmpty()) {
-                  label.append(Component.literal("\"" + layer.message() + "\"").withStyle(ChatFormatting.UNDERLINE).withStyle(ChatFormatting.WHITE));
+                  label.append(new net.minecraft.network.chat.TextComponent("\"" + layer.message() + "\"").withStyle(ChatFormatting.UNDERLINE).withStyle(ChatFormatting.WHITE));
                }
 
                this.timelineLayout.child(this.timelineNode(label, layer.timestamp(), layer.changes().size(), sel, pos > 0, pos < total - 1, i == layers.size() - 1 ? RuleStackScreen.NodeStyle.HEAD : RuleStackScreen.NodeStyle.NORMAL, () -> this.selectLayer(layer, false)));
                ++pos;
             }
 
-            this.timelineLayout.child(this.timelineNode(Component.translatable("gui.rulestack.base").withStyle(ChatFormatting.GRAY), (Long)null, 0, false, pos > 0, false, RuleStackScreen.NodeStyle.BASE, (Runnable)null));
+            this.timelineLayout.child(this.timelineNode(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.base").withStyle(ChatFormatting.GRAY), (Long)null, 0, false, pos > 0, false, RuleStackScreen.NodeStyle.BASE, (Runnable)null));
             this.buildBottomButtons();
          }
       }
@@ -329,12 +330,12 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
          boolean hasPending = !data.pendingChanges().isEmpty();
          boolean hasFuture = !data.futureLayers().isEmpty();
          if (hasFuture && !hasPending) {
-            RuleStackSyncPayload.LayerInfo next = (RuleStackSyncPayload.LayerInfo)data.futureLayers().getLast();
+            RuleStackSyncPayload.LayerInfo next = (RuleStackSyncPayload.LayerInfo)data.futureLayers().get(data.futureLayers().size() - 1);
             int var10000 = next.id();
             String redoLabel = "#" + var10000 + (next.message().isEmpty() ? "" : " \"" + next.message() + "\"");
-            return Component.translatable("gui.rulestack.push_hint.redo", new Object[]{redoLabel}).withStyle(ChatFormatting.AQUA);
+            return new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.push_hint.redo", new Object[]{redoLabel}).withStyle(ChatFormatting.AQUA);
          } else {
-            return hasFuture ? Component.translatable("gui.rulestack.push_hint.discard_future", new Object[]{String.valueOf(data.futureLayers().size())}).withStyle(ChatFormatting.GOLD) : null;
+            return hasFuture ? new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.push_hint.discard_future", new Object[]{String.valueOf(data.futureLayers().size())}).withStyle(ChatFormatting.GOLD) : null;
          }
       }
    }
@@ -407,7 +408,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       if (changeCount > 0 || timestamp != null) {
          String var10000 = changeCount > 0 ? changeCount + " ch" : "";
          String meta = var10000 + (timestamp != null ? (changeCount > 0 ? "  " : "") + ts(timestamp) : "");
-         content.child(UIComponents.label(Component.literal(meta).withStyle(ChatFormatting.DARK_GREEN)));
+         content.child(UIComponents.label(new net.minecraft.network.chat.TextComponent(meta).withStyle(ChatFormatting.DARK_GREEN)));
       }
 
       entry.child(content);
@@ -425,14 +426,14 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
    private void selectLayer(RuleStackSyncPayload.LayerInfo layer, boolean isFuture) {
       this.selectedLayerId = layer.id();
       this.rebuildTimeline();
-      MutableComponent header = Component.literal("#" + layer.id() + " ").withStyle(ChatFormatting.YELLOW);
+      MutableComponent header = new net.minecraft.network.chat.TextComponent("#" + layer.id() + " ").withStyle(ChatFormatting.YELLOW);
       if (!layer.message().isEmpty()) {
-         header.append(Component.literal("\"" + layer.message() + "\"").withStyle(ChatFormatting.UNDERLINE).withStyle(ChatFormatting.WHITE));
+         header.append(new net.minecraft.network.chat.TextComponent("\"" + layer.message() + "\"").withStyle(ChatFormatting.UNDERLINE).withStyle(ChatFormatting.WHITE));
       }
 
-      header.append(Component.literal(" (" + layer.changes().size() + " ch)"));
+      header.append(new net.minecraft.network.chat.TextComponent(" (" + layer.changes().size() + " ch)"));
       if (isFuture) {
-         header.append(Component.literal(" ").append(Component.translatable("gui.rulestack.future_marker").withStyle(ChatFormatting.AQUA)));
+         header.append(new net.minecraft.network.chat.TextComponent(" ").append(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.future_marker").withStyle(ChatFormatting.AQUA)));
       }
 
       this.rebuildChanges(layer.changes(), header);
@@ -443,7 +444,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       this.rebuildTimeline();
       RuleStackData data = CarpetGUIClient.cachedRuleStackData;
       if (data != null) {
-         this.rebuildChanges(data.pendingChanges(), Component.translatable("gui.rulestack.pending_changes", new Object[]{String.valueOf(data.pendingChanges().size())}).withStyle(ChatFormatting.AQUA));
+         this.rebuildChanges(data.pendingChanges(), new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.pending_changes", new Object[]{String.valueOf(data.pendingChanges().size())}).withStyle(ChatFormatting.AQUA));
       }
    }
 
@@ -455,7 +456,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       if (this.changesLayout != null) {
          this.changesLayout.clearChildren();
          if (changes.isEmpty()) {
-            this.changesLayout.child(UIComponents.label(Component.translatable("gui.rulestack.no_changes").withStyle(ChatFormatting.WHITE)));
+            this.changesLayout.child(UIComponents.label(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.no_changes").withStyle(ChatFormatting.WHITE)));
          } else {
             for(RuleStackSyncPayload.ChangeInfo c : changes) {
                this.changesLayout.child(this.changeCard(c));
@@ -485,24 +486,24 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
          nameLabel.tooltip(ScreenUtils.buildTooltip(ruleData, ""));
       }
 
-      nameLabel.child(UIComponents.label(Component.literal(translatedName)));
-      nameLabel.child(UIComponents.label(Component.literal("[" + managerId + "]").withStyle(ChatFormatting.BLUE)));
+      nameLabel.child(UIComponents.label(new net.minecraft.network.chat.TextComponent(translatedName)));
+      nameLabel.child(UIComponents.label(new net.minecraft.network.chat.TextComponent("[" + managerId + "]").withStyle(ChatFormatting.BLUE)));
       card.child(nameLabel);
       FlowLayout valRow = UIContainers.horizontalFlow(Sizing.fill(100), Sizing.content());
       valRow.gap(5);
       valRow.verticalAlignment(VerticalAlignment.CENTER);
       valRow.padding(Insets.top(3));
       valRow.child(this.valueLabel(c.prevValue(), c.prevIsDefault(), "§c"));
-      valRow.child(UIComponents.label(Component.literal("->")));
+      valRow.child(UIComponents.label(new net.minecraft.network.chat.TextComponent("->")));
       valRow.child(this.valueLabel(c.newValue(), c.newIsDefault(), "§a"));
       card.child(valRow);
       return card;
    }
 
    private LabelComponent valueLabel(String val, boolean isDefault, String color) {
-      MutableComponent comp = Component.literal(color + val);
+      MutableComponent comp = new net.minecraft.network.chat.TextComponent(color + val);
       if (isDefault) {
-         comp.append(Component.translatable("commands.rulestack.change.default_marker"));
+         comp.append(new net.minecraft.network.chat.TranslatableComponent("commands.rulestack.change.default_marker"));
       }
 
       return UIComponents.label(comp);
@@ -512,7 +513,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
       RuleStackData data = CarpetGUIClient.cachedRuleStackData;
       if (this.prefabNameLabel != null) {
          String name = data != null ? data.activePrefabName() : "…";
-         this.prefabNameLabel.text(Component.translatable("gui.rulestack.prefab", new Object[]{name}).withStyle(ChatFormatting.YELLOW));
+         this.prefabNameLabel.text(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.prefab", new Object[]{name}).withStyle(ChatFormatting.YELLOW));
       }
 
       if (this.prefabPanel == RuleStackScreen.PrefabPanel.LIST) {
@@ -553,7 +554,7 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
 
    private void clearChangesPane() {
       if (this.changesHeaderLabel != null) {
-         this.changesHeaderLabel.text(Component.translatable("gui.rulestack.select_layer"));
+         this.changesHeaderLabel.text(new net.minecraft.network.chat.TranslatableComponent("gui.rulestack.select_layer"));
       }
 
       if (this.changesLayout != null) {
@@ -563,13 +564,17 @@ public class RuleStackScreen extends BaseOwoScreen<FlowLayout> {
    }
 
    private void requestSync() {
-      ClientPlayNetworking.send(new RequestRuleStackPayload());
+      CarpetGUIClientPacketHandler.send(new RequestRuleStackPayload());
    }
 
    private void sendCmd(String cmd) {
       ClientPacketListener conn = Minecraft.getInstance().getConnection();
       if (conn != null) {
-         conn.sendCommand(cmd);
+         //? if <1.19 {
+         conn.send(new net.minecraft.network.protocol.game.ServerboundChatPacket("/" + cmd));
+         //?} else {
+         /*conn.sendCommand(cmd);
+         *///?}
          this.pendingRefreshTicks = 3;
       }
 
